taiga-k8s/taiga-async-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: taiga-async
  name: taiga-async
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-async
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/taiga-docker-taiga: "true"
        io.kompose.service: taiga-async
    spec:
      containers:
        - command:
            - /taiga-back/docker/async_entrypoint.sh
          image: taigaio/taiga-back:latest
          name: taiga-async
          volumeMounts:
            - mountPath: /taiga-back/static
              name: taiga-static-data
            - mountPath: /taiga-back/media
              name: taiga-media-data
      restartPolicy: Always
      volumes:
        - name: taiga-static-data
          persistentVolumeClaim:
            claimName: taiga-static-data
        - name: taiga-media-data
          persistentVolumeClaim:
            claimName: taiga-media-data
