taiga-k8s/taiga-async-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: taiga-async-rabbitmq
  name: taiga-async-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-async-rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/taiga-docker-taiga: "true"
        io.kompose.service: taiga-async-rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              valueFrom:
                configMapKeyRef:
                  name: taiga-config
                  key: RABBITMQ_PASS
            - name: RABBITMQ_DEFAULT_USER
              valueFrom:
                configMapKeyRef:
                  name: taiga-config
                  key: RABBITMQ_USER
            - name: RABBITMQ_DEFAULT_VHOST
              valueFrom:
                configMapKeyRef:
                  name: taiga-config
                  key: RABBITMQ_VHOST
            - name: RABBITMQ_ERLANG_COOKIE
              valueFrom:
                configMapKeyRef:
                  name: taiga-config
                  key: RABBITMQ_ERLANG_COOKIE
          image: rabbitmq:3.8-management-alpine
          name: taiga-async-rabbitmq
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: taiga-async-rabbitmq-data
      hostname: taiga-async-rabbitmq
      restartPolicy: Always
      volumes:
        - name: taiga-async-rabbitmq-data
          persistentVolumeClaim:
            claimName: taiga-async-rabbitmq-data
