taiga-k8s/taiga-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: taiga-gateway
  name: taiga-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/taiga-docker-taiga: "true"
        io.kompose.service: taiga-gateway
    spec:
      containers:
        - image: nginx:1.19-alpine
          name: taiga-gateway
          ports:
            - containerPort: 9000
              hostPort: 9000
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: taiga-gateway-config
            - mountPath: /taiga/static
              name: taiga-static-data
            - mountPath: /taiga/media
              name: taiga-media-data
      restartPolicy: Always
      volumes:
        - name: taiga-gateway-config
          configMap:
            name: taiga-gateway-config
        - name: taiga-static-data
          persistentVolumeClaim:
            claimName: taiga-static-data
        - name: taiga-media-data
          persistentVolumeClaim:
            claimName: taiga-media-data
