taiga-k8s/taiga-protected-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: taiga-protected
  name: taiga-protected
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-protected
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/taiga-docker-taiga: "true"
        io.kompose.service: taiga-protected
    spec:
      containers:
        - env:
            - name: MAX_AGE
              valueFrom:
                configMapKeyRef:
                  name: taiga-config
                  key: ATTACHMENTS_MAX_AGE
            - name: SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  name: taiga-config
                  key: SECRET_KEY
          image: taigaio/taiga-protected:latest
          name: taiga-protected
      restartPolicy: Always
