taiga-k8s/taiga-async-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taiga-async
  namespace: taiga
spec:
  selector:
    io.kompose.service: taiga-async
  ports:
    - name: port1
      protocol: TCP
      port: 8000
      targetPort: 8000
