taiga-k8s/taiga-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taiga-back
  namespace: taiga
spec:
  selector:
    io.kompose.service: taiga-back
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
