taiga-k8s/taiga-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taiga-db
  namespace: taiga
spec:
  selector:
    io.kompose.service: taiga-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
