taiga-k8s/taiga-events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taiga-events
spec:
  selector:
    io.kompose.service: taiga-events
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
