taiga-k8s/taiga-protected-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taiga-protected
spec:
  selector:
    io.kompose.service: taiga-protected
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
